--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,9 @@
   <h1>vijay</h1>
 </center>
 <hr>
+<P>
+  joseph Vijay Chandrasekhar (born 22 June 1974), known mononymously as Vijay, is an Indian actor, dancer, playback singer and philanthropist who works predominantly in Tamil cinema and also appeared in other Indian languages films. 
+</P>
+<p>
+  contact-1234567890
+</p>
