--- a/vijay.html
+++ b/vijay.html
@@ -3,5 +3,6 @@
 </center>
 <hr>
 <P>
-  joseph Vijay Chandrasekhar (born 22 June 1974), known mononymously as Vijay, is an Indian actor, dancer, playback singer and philanthropist who works predominantly in Tamil cinema and also appeared in other Indian languages films. 
+  Joseph Vijay Chandrasekhar (born 22 June 1974), known mononymously as Vijay, is an Indian actor, dancer, playback singer and philanthropist who works predominantly in Tamil cinema and also appeared in other Indian languages films. Referred to by fans and media as "Thalapathy" (commander), Vijay is the highest paid actor in Tamil cinema.
+
 </P>
